add about page and link to home page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar">
       <span class="navbar-brand mb-0 h1">Alien Advice</span>
-      <button type="button" class="btn btn-color">About Steve</button>
+      <button type="button" class="btn btn-color" href="about.html">About Steve</button>
     </nav>
 
     <div class="container" id="header"></div>
