--- a/about.html
+++ b/about.html
@@ -15,7 +15,13 @@
       <div class="container about-header" id="header">All About Steve</div>
       <div>
           <p>
-              
+              Steve came from a planet just outside of the Milky Way galaxy. He was an explorer that enjoyed vititing and camping out on other planets. 
+          </p>
+          <p>
+              However, when Steve heard that Earth was no longer going to consider Pluto a planet, he decided to take matters into his own hands. He jumped on his spacecraft and headed to Earth. Upon arrival, Steve ended up crashing and getting a concussion.
+          </p>
+          <p>
+              Now Steve spends his days giving everyone the best advice he can, even if his brain is a little jumbled!
           </p>
       </div>
 </body>
