link css to about page

--- a/about.html
+++ b/about.html
@@ -5,6 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="assets/style/style.css" />
     <title>About Steve</title>
 </head>
 <body>
@@ -12,7 +19,7 @@
         <span class="navbar-brand mb-0 h1">About Steve</span>
         <button type="button" class="btn btn-color" href="index.html">Alien Advice</button>
       </nav>
-      <div class="container about-header" id="header">All About Steve</div>
+      <div class="container about-header h3" id="header">All About Steve</div>
       <div>
           <p>
               Steve came from a planet just outside of the Milky Way galaxy. He was an explorer that enjoyed vititing and camping out on other planets. 
