--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <div class="container" id="form"></div>
 
     <div class="container">
-      <div class="container" id="steve-image"></div>
+      <div class="container" id="steve-image">
+          <button class="stuff button btn-success" type="submit" >stuff</button>
+      </div>
       <div class="container" id="advice-block"></div>
     </div>
 
@@ -53,6 +55,7 @@
     ></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/app.js"></script>
   </body>
 </html>
