--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 					placeholder="Your Question For Steve!"
 				></textarea>
 
-				<button class="btn btn-info btn-block" type="submit">Submit</button>
+				<button id="submit" class="btn btn-info btn-block" type="submit">
+					Submit
+				</button>
 			</form>
 		</div>
 		<div class="container">
