--- a/index.html
+++ b/index.html
@@ -39,13 +39,27 @@
 					class="form-control"
 					placeholder="First name"
 				/>
-
+<!-- 
 				<textarea
 					class="form-control rounded-0"
 					id="exampleFormControlTextareaSave"
 					rows="3"
 					placeholder="Your Question For Steve!"
-				></textarea>
+				></textarea> -->
+				<div class="pure-menu pure-menu-horizontal">
+					<ul class="pure-menu-list">
+						<li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
+							<a href="#" id="topics" class="pure-menu-link">Topics</a>
+							<ul class="pure-menu-children">
+								<li id="friendship" class="pure-menu-item"><a href="#" class="pure-menu-link">Friendship</a></li>
+								<li id="food" class="pure-menu-item"><a href="#" class="pure-menu-link">Food</a></li>
+								<li id="life" class="pure-menu-item"><a href="#" class="pure-menu-link">Life</a></li>
+								<li id="love" class="pure-menu-item"><a href="#" class="pure-menu-link">Love</a></li>
+								<li id="other" class="pure-menu-item"><a href="#" class="pure-menu-link">Other</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 
 				<button id="submit" class="btn btn-info btn-block" type="submit">
 					Submit
@@ -54,7 +68,6 @@
 		</div>
 		<div class="container">
 			<div class="container" id="steve-image">
-				<button class="stuff button btn-success" type="submit">stuff</button>
 			</div>
 			<div class="container" id="advice-block">
 				<div class="card">
