added topics dropdown and set variable to grab the selected topic

--- a/index.html
+++ b/index.html
@@ -46,20 +46,28 @@
 					rows="3"
 					placeholder="Your Question For Steve!"
 				></textarea> -->
-				<div class="pure-menu pure-menu-horizontal">
+				<!-- <div class="pure-menu pure-menu-horizontal">
 					<ul class="pure-menu-list">
 						<li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
 							<a href="#" id="topics" class="pure-menu-link">Topics</a>
 							<ul class="pure-menu-children">
-								<li id="friendship" class="pure-menu-item"><a href="#" class="pure-menu-link">Friendship</a></li>
-								<li id="food" class="pure-menu-item"><a href="#" class="pure-menu-link">Food</a></li>
-								<li id="life" class="pure-menu-item"><a href="#" class="pure-menu-link">Life</a></li>
-								<li id="love" class="pure-menu-item"><a href="#" class="pure-menu-link">Love</a></li>
-								<li id="other" class="pure-menu-item"><a href="#" class="pure-menu-link">Other</a></li>
+								<li id="friendship" class="pure-menu-item query"><a href="#" class="pure-menu-link">Friendship</a></li>
+								<li id="food" class="pure-menu-item query"><a href="#" class="pure-menu-link">Food</a></li>
+								<li id="life" class="pure-menu-item query"><a href="#" class="pure-menu-link">Life</a></li>
+								<li id="love" class="pure-menu-item query"><a href="#" class="pure-menu-link">Love</a></li>
+								<li id="other" class="pure-menu-item query"><a href="#" class="pure-menu-link">Other</a></li>
 							</ul>
 						</li>
 					</ul>
-				</div>
+				</div> -->
+				<label for="topics">Topics</label>
+				<select id="topics">
+					<option>Friendship</option>
+					<option>Food</option>
+					<option>Life</option>
+					<option>Love</option>
+					<option>Other</option>
+				</select>
 
 				<button id="submit" class="btn btn-info btn-block" type="submit">
 					Submit
