--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>Other: <span id="otherCounter"></span></p>
           </div>
 
-          <button id="submit" class="btn btn-info btn-block" type="submit">
+          <button id="submit" class="btn btn-info btn-block" type="submit" disabled>
             Submit
           </button>
         </form>
