adjust topic names in html

--- a/index.html
+++ b/index.html
@@ -45,23 +45,32 @@
 
           <label for="topics">Topics</label>
           <select id="topics">
-            <option>Friendship</option>
-            <option>Food</option>
+            <option>Friend</option>
+            <option>Work</option>
             <option>Life</option>
-            <option>Love</option>
+			<option>Love</option>
+			<option>Want</option>
+			<option>You</option>
             <option>Other</option>
           </select>
 
           <div class="counterOutput">
-			  <h2>Number of selections</h2>
-            <p>Friendship: <span id="friendshipCounter"></span></p>
-            <p>Food: <span id="foodCounter"></span></p>
+            <h2>Number of selections</h2>
+            <p>Friend: <span id="friendCounter"></span></p>
+            <p>Work: <span id="workCounter"></span></p>
             <p>Life: <span id="lifeCounter"></span></p>
-            <p>Love: <span id="loveCounter"></span></p>
+			<p>Love: <span id="loveCounter"></span></p>
+			<p>Want: <span id="wantCounter"></span></p>
+			<p>You: <span id="youCounter"></span></p>
             <p>Other: <span id="otherCounter"></span></p>
           </div>
 
-          <button id="submit" class="btn btn-info btn-block" type="submit" disabled>
+          <button
+            id="submit"
+            class="btn btn-info btn-block"
+            type="submit"
+            disabled
+          >
             Submit
           </button>
         </form>
