add name validation

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <form class="border border-light p-5">
           <input
             type="text"
-            id="defaultSaveFormFirstName"
+            id="nameInput"
             class="form-control"
             placeholder="First name"
           />
