added in new background image/colors

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="collapse" id="collapseExample">
 				  <div class="card card-body">
 					<div class="counterOutput">
-						<table id="topic-data" class="table table-hover table-sm">
+						<table id="topic-data" class="table table-sm">
 							<thead class="text-white" style="background-color: #4a26ff;">
 							  <tr>
 								<th scope="col">Topic</th>
@@ -162,13 +162,13 @@
 						<div id="steve-image"></div>
 					  </div>
 					  <div class="col-md-8">
-						<div class="card-body">
-						  <h5 class="card-title text-black">Steve's Advice on <span id="topic-output"></span></h5>
+						<div id="advice-section" class="card-body">
+						  <h5 class="card-title text-black">Steve's Advice on <span id="topic-output"></span>:</h5>
 						  <p class="card-text">Hello <span id="user-name"></span>,
 							<p><span id="advice-output"></span></p>
 							<p>Love, <br>Steve</p>
-						  <p class="card-text"><small class="text-muted">Disclaimer: Sometimes looking for answers only leads to more
-							questions</small></p>
+						  <!-- <p class="card-text"><small class="text-muted">Disclaimer: Sometimes looking for answers only leads to more
+							questions</small></p> -->
 						</div>
 					  </div>
 					</div>
