--- a/about.html
+++ b/about.html
@@ -2,34 +2,87 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="assets/style/style.css" />
-    <title>About Steve</title>
-</head>
-<body>
-    <nav class="navbar">
-        <span class="navbar-brand mb-0 h1">About Steve</span>
-        <button type="button" class="btn btn-color" href="index.html">Alien Advice</button>
-      </nav>
-      <div class="container about-header h3" id="header">All About Steve</div>
-      <div>
-          <p>
-              Steve came from a planet just outside of the Milky Way galaxy. He was an explorer that enjoyed vititing and camping out on other planets. 
-          </p>
-          <p>
-              However, when Steve heard that Earth was no longer going to consider Pluto a planet, he decided to take matters into his own hands. He jumped on his spacecraft and headed to Earth. Upon arrival, Steve ended up crashing and getting a concussion.
-          </p>
-          <p>
-              Now Steve spends his days giving everyone the best advice he can, even if his brain is a little jumbled!
-          </p>
-      </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="assets/style/style.css" />
+		<title>About Steve</title>
+	</head>
+	<body>
+		<nav
+			class="navbar navbar-expand-lg navbar-dark"
+			style="background-color: #4a26ff;"
+		>
+			<a class="navbar-brand" href="#">
+				<img
+					src="assets/images/cute-alien.png"
+					width="30"
+					height="30"
+					class="d-inline-block align-top"
+					alt=""
+				/>
+				Alien Advice</a
+			>
+			<button
+				class="navbar-toggler"
+				type="button"
+				data-toggle="collapse"
+				data-target="#navbarNav"
+				aria-controls="navbarNav"
+				aria-expanded="false"
+				aria-label="Toggle navigation"
+			>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="index.html">Advice</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="about.html"
+							>About Steve <span class="sr-only">(current)</span></a
+						>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<div class="container" id="partTwo">
+			<h3 class="about-header"><u>All About Steve</u></h3>
+			<div id="about-steve">
+				<p>
+					Steve came from a planet just outside of the Milky Way galaxy. He was
+					an explorer that enjoyed vititing and camping out on other planets.
+				</p>
+				<p>
+					However, when Steve heard that Earth was no longer going to consider
+					Pluto a planet, he decided to take matters into his own hands. He
+					jumped on his spacecraft and headed to Earth. Upon arrival, Steve
+					ended up crashing and getting a concussion.
+				</p>
+				<p>
+					Now Steve spends his days giving everyone the best advice he can, even
+					if his brain is a little jumbled!
+				</p>
+			</div>
+			<figure class="figure col-md-4 offset-md-4">
+				<img
+					src="/assets/images/steve.jpg"
+					class="figure-img img-fluid rounded"
+					alt="Alien"
+					width="400"
+					height="400"
+				/>
+				<figcaption class="figure-caption">
+					Steve, shortly after he crash landed to Earth.
+				</figcaption>
+			</figure>
+		</div>
+	</body>
 </html>
