made minor adjustments to overall look

--- a/about.html
+++ b/about.html
@@ -2,87 +2,100 @@
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="assets/style/style.css" />
+    <title>About Steve</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="index.html">
+        <img
+          src="assets/images/cute-alien.png"
+          width="30"
+          height="30"
+          class="d-inline-block align-top"
+          alt=""
+        />
+        Alien Advice</a
+      >
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Advice</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="about.html"
+              >About Steve <span class="sr-only">(current)</span></a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container" id="partTwo">
+      <h3 class="about-header"><u>All About Steve</u></h3>
+      <div id="about-steve">
+        <p>
+          Steve came from a planet just outside of the Milky Way galaxy. He was
+          an explorer that enjoyed visiting and camping out on other planets.
+        </p>
+        <p>
+          However, when Steve heard that Earth was no longer going to consider
+          Pluto a planet, he decided to take matters into his own hands. He
+          jumped on his spacecraft and headed to Earth. Upon arrival, Steve
+          ended up crashing and getting a concussion.
+        </p>
+        <p>
+          Now Steve spends his days giving everyone the best advice he can, even
+          if his brain is a little jumbled!
+        </p>
+      </div>
+      <figure class="figure col-md-4 offset-md-4">
+        <img
+          src="/assets/images/steve.jpg"
+          class="figure-img img-fluid rounded"
+          alt="Alien"
+          width="400"
+          height="400"
+        />
+        <figcaption class="figure-caption">
+          Steve, shortly after he crash landed to Earth.
+        </figcaption>
+      </figure>
+    </div>
+    <script
+			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 			crossorigin="anonymous"
-		/>
-		<link rel="stylesheet" href="assets/style/style.css" />
-		<title>About Steve</title>
-	</head>
-	<body>
-		<nav
-			class="navbar navbar-expand-lg navbar-dark"
-			style="background-color: #4a26ff;"
-		>
-			<a class="navbar-brand" href="#">
-				<img
-					src="assets/images/cute-alien.png"
-					width="30"
-					height="30"
-					class="d-inline-block align-top"
-					alt=""
-				/>
-				Alien Advice</a
-			>
-			<button
-				class="navbar-toggler"
-				type="button"
-				data-toggle="collapse"
-				data-target="#navbarNav"
-				aria-controls="navbarNav"
-				aria-expanded="false"
-				aria-label="Toggle navigation"
-			>
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Advice</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="about.html"
-							>About Steve <span class="sr-only">(current)</span></a
-						>
-					</li>
-				</ul>
-			</div>
-		</nav>
-		<div class="container" id="partTwo">
-			<h3 class="about-header"><u>All About Steve</u></h3>
-			<div id="about-steve">
-				<p>
-					Steve came from a planet just outside of the Milky Way galaxy. He was
-					an explorer that enjoyed vititing and camping out on other planets.
-				</p>
-				<p>
-					However, when Steve heard that Earth was no longer going to consider
-					Pluto a planet, he decided to take matters into his own hands. He
-					jumped on his spacecraft and headed to Earth. Upon arrival, Steve
-					ended up crashing and getting a concussion.
-				</p>
-				<p>
-					Now Steve spends his days giving everyone the best advice he can, even
-					if his brain is a little jumbled!
-				</p>
-			</div>
-			<figure class="figure col-md-4 offset-md-4">
-				<img
-					src="/assets/images/steve.jpg"
-					class="figure-img img-fluid rounded"
-					alt="Alien"
-					width="400"
-					height="400"
-				/>
-				<figcaption class="figure-caption">
-					Steve, shortly after he crash landed to Earth.
-				</figcaption>
-			</figure>
-		</div>
-	</body>
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+			crossorigin="anonymous"
+		></script>
+		<script src="assets/app.js"></script>
+  </body>
 </html>
