--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
 	</head>
 	<body>
 		<nav
-			class="navbar navbar-expand-lg navbar-dark"
-			style="background-color: #4a26ff;"
-		>
-			<a class="navbar-brand" href="#">
+			class="navbar navbar-expand-lg navbar-dark">
+			<a class="navbar-brand" href="index.html">
 				<img
 					src="assets/images/cute-alien.png"
 					width="30"
@@ -54,7 +52,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="#"
+						<a class="nav-link" href="index.html"
 							>Advice <span class="sr-only">(current)</span></a
 						>
 					</li>
