--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         />
         Alien Advice</a
       >
-      <button
+      <buttonarr.push({friendCounter: friendCounter})
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
@@ -70,7 +70,7 @@
       </div>
       <figure class="figure col-md-4 offset-md-4">
         <img
-          src="/assets/images/steve.jpg"
+          src="assets/images/steve.jpg"
           class="figure-img img-fluid rounded"
           alt="Alien"
           width="400"
