fixed image path on about page

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         />
         Alien Advice</a
       >
-      <buttonarr.push({friendCounter: friendCounter})
+      <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
